--- a/charts/csi-baremetal-operator/templates/rbac.yaml
+++ b/charts/csi-baremetal-operator/templates/rbac.yaml
@@ -38,6 +38,12 @@ rules:
   - "*"
   verbs:
   - "*"
+- apiGroups:
+  - config.openshift.io
+  resources:
+  - schedulers
+  verbs:
+  - "*"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
