--- a/charts/csi-baremetal-operator/templates/rbac.yaml
+++ b/charts/csi-baremetal-operator/templates/rbac.yaml
@@ -38,12 +38,14 @@ rules:
   - "*"
   verbs:
   - "*"
+{{- if eq .Values.platform "openshift" }}
 - apiGroups:
   - config.openshift.io
   resources:
   - schedulers
   verbs:
   - "*"
+{{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
