--- a/charts/csi-baremetal-operator/templates/rbac.yaml
+++ b/charts/csi-baremetal-operator/templates/rbac.yaml
@@ -38,14 +38,13 @@ rules:
   - "*"
   verbs:
   - "*"
-{{- if eq .Values.platform "openshift" }}
+# Required for Openshift only
 - apiGroups:
   - config.openshift.io
   resources:
   - schedulers
   verbs:
   - "*"
-{{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
