--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_volumes.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_volumes.yaml
@@ -1,13 +1,53 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1
+apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: v0.2.2
   creationTimestamp: null
   name: volumes.csi-baremetal.dell.com
 spec:
+  additionalPrinterColumns:
+  - JSONPath: .spec.Size
+    description: Volume allocated size
+    name: SIZE
+    type: string
+  - JSONPath: .spec.StorageClass
+    description: Volume storage class
+    name: STORAGE CLASS
+    type: string
+  - JSONPath: .spec.Health
+    description: Volume health status
+    name: HEALTH
+    type: string
+  - JSONPath: .spec.CSIStatus
+    description: Volume internal CSI status
+    name: CSI_STATUS
+    type: string
+  - JSONPath: .spec.OperationalStatus
+    description: Volume operational status
+    name: OP_STATUS
+    priority: 1
+    type: string
+  - JSONPath: .spec.Usage
+    description: Volume usage status
+    name: USAGE
+    priority: 1
+    type: string
+  - JSONPath: .spec.Type
+    description: Volume fs type
+    name: TYPE
+    priority: 1
+    type: string
+  - JSONPath: .spec.Location
+    description: Volume LVG or drive location
+    name: LOCATION
+    type: string
+  - JSONPath: .spec.NodeId
+    description: Volume node location
+    name: NODE
+    type: string
   group: csi-baremetal.dell.com
   names:
     kind: Volume
@@ -15,102 +55,63 @@ spec:
     plural: volumes
     singular: volume
   scope: Namespaced
+  subresources: {}
+  validation:
+    openAPIV3Schema:
+      description: Volume is the Schema for the volumes API
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          properties:
+            CSIStatus:
+              type: string
+            Ephemeral:
+              type: boolean
+            Health:
+              type: string
+            Id:
+              type: string
+            Location:
+              type: string
+            LocationType:
+              type: string
+            Mode:
+              type: string
+            NodeId:
+              type: string
+            OperationalStatus:
+              type: string
+            Owners:
+              items:
+                type: string
+              type: array
+            Size:
+              format: int64
+              type: integer
+            StorageClass:
+              type: string
+            Type:
+              type: string
+            Usage:
+              type: string
+          type: object
+      type: object
+  version: v1
   versions:
-  - additionalPrinterColumns:
-    - description: Volume allocated size
-      jsonPath: .spec.Size
-      name: SIZE
-      type: string
-    - description: Volume storage class
-      jsonPath: .spec.StorageClass
-      name: STORAGE CLASS
-      type: string
-    - description: Volume health status
-      jsonPath: .spec.Health
-      name: HEALTH
-      type: string
-    - description: Volume internal CSI status
-      jsonPath: .spec.CSIStatus
-      name: CSI_STATUS
-      type: string
-    - description: Volume operational status
-      jsonPath: .spec.OperationalStatus
-      name: OP_STATUS
-      priority: 1
-      type: string
-    - description: Volume usage status
-      jsonPath: .spec.Usage
-      name: USAGE
-      priority: 1
-      type: string
-    - description: Volume fs type
-      jsonPath: .spec.Type
-      name: TYPE
-      priority: 1
-      type: string
-    - description: Volume LVG or drive location
-      jsonPath: .spec.Location
-      name: LOCATION
-      type: string
-    - description: Volume node location
-      jsonPath: .spec.NodeId
-      name: NODE
-      type: string
-    name: v1
-    schema:
-      openAPIV3Schema:
-        description: Volume is the Schema for the volumes API
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            properties:
-              CSIStatus:
-                type: string
-              Ephemeral:
-                type: boolean
-              Health:
-                type: string
-              Id:
-                type: string
-              Location:
-                type: string
-              LocationType:
-                type: string
-              Mode:
-                type: string
-              NodeId:
-                type: string
-              OperationalStatus:
-                type: string
-              Owners:
-                items:
-                  type: string
-                type: array
-              Size:
-                format: int64
-                type: integer
-              StorageClass:
-                type: string
-              Type:
-                type: string
-              Usage:
-                type: string
-            type: object
-        type: object
+  - name: v1
     served: true
     storage: true
-    subresources: {}
 status:
   acceptedNames:
     kind: ""
