--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release Charts
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - v*
 
 env:
   builds_url: http://asdrepo.isus.emc.com/artifactory/atlantic-helm-build
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Calculate version
         id: version
-        run: echo "${ github.ref.split('-')[0][1:] }${ git rev-parse --short HEAD }"
+        run: echo ${{ github.ref.split('-')[0][1:] }}${{ github.sha }}
 
       - name: Download Binary
         uses: wei/wget@v1
