--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_logicalvolumegroups.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_logicalvolumegroups.yaml
@@ -1,40 +1,13 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.2
+    controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
   name: logicalvolumegroups.csi-baremetal.dell.com
 spec:
-  additionalPrinterColumns:
-  - JSONPath: .spec.Size
-    description: Size of Logical volume group
-    name: SIZE
-    type: string
-  - JSONPath: .spec.Health
-    description: LVG health
-    name: HEALTH
-    type: string
-  - JSONPath: .spec.Status
-    description: LVG status
-    name: Status
-    priority: 1
-    type: string
-  - JSONPath: .spec.Locations
-    description: LVG drives locations list
-    name: LOCATIONS
-    type: string
-  - JSONPath: .spec.Node
-    description: LVG node location
-    name: NODE
-    type: string
-  - JSONPath: .spec.VolumeRefs
-    description: Volume references
-    name: VOLUMES
-    priority: 1
-    type: string
   group: csi-baremetal.dell.com
   names:
     kind: LogicalVolumeGroup
@@ -45,51 +18,73 @@ spec:
     - lvgs
     singular: logicalvolumegroup
   scope: Cluster
-  subresources: {}
-  validation:
-    openAPIV3Schema:
-      description: LogicalVolumeGroup is the Schema for the LVGs API
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          properties:
-            Health:
-              type: string
-            Locations:
-              items:
-                type: string
-              type: array
-            Name:
-              type: string
-            Node:
-              type: string
-            Size:
-              format: int64
-              type: integer
-            Status:
-              type: string
-            VolumeRefs:
-              items:
-                type: string
-              type: array
-          type: object
-      type: object
-  version: v1
   versions:
-  - name: v1
+  - additionalPrinterColumns:
+    - description: Size of Logical volume group
+      jsonPath: .spec.Size
+      name: SIZE
+      type: string
+    - description: LVG health
+      jsonPath: .spec.Health
+      name: HEALTH
+      type: string
+    - description: LVG status
+      jsonPath: .spec.Status
+      name: Status
+      priority: 1
+      type: string
+    - description: LVG drives locations list
+      jsonPath: .spec.Locations
+      name: LOCATIONS
+      type: string
+    - description: LVG node location
+      jsonPath: .spec.Node
+      name: NODE
+      type: string
+    - description: Volume references
+      jsonPath: .spec.VolumeRefs
+      name: VOLUMES
+      priority: 1
+      type: string
+    name: v1
+    schema:
+      openAPIV3Schema:
+        description: LogicalVolumeGroup is the Schema for the LVGs API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            properties:
+              Health:
+                type: string
+              Locations:
+                items:
+                  type: string
+                type: array
+              Name:
+                type: string
+              Node:
+                type: string
+              Size:
+                format: int64
+                type: integer
+              Status:
+                type: string
+              VolumeRefs:
+                items:
+                  type: string
+                type: array
+            type: object
+        type: object
     served: true
     storage: true
+    subresources: {}
 status:
   acceptedNames:
     kind: ""
